--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply bg-[#F1F1FF];
+  }
+
   h1 {
     font-size: 24px;
     line-height: 30px;
